--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="Content-Language" content="en-us" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>MyTAP: Unit Testing for PostgreSQL</title>
-    <link rel="stylesheet" type="text/css" href="/ui/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/ui/css/menu.css" />
+    <link rel="stylesheet" type="text/css" href="ui/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="ui/css/menu.css" />
     <!--[if IE 6]>
-      <link rel="stylesheet" type="text/css" href="/ui/css/ie.css" />
+      <link rel="stylesheet" type="text/css" href="ui/css/ie.css" />
     <![endif]-->
   </head>
 
@@ -205,7 +205,7 @@ ROLLBACK;</code></pre>
     </div>
     <div id="menu">
       <div id="menutop">
-        <a title="MyTAP home" href="/"><img alt="home" src="/ui/img/tap.jpg" width="200" alt="tap" /></a>
+        <a title="MyTAP home" href="/"><img alt="home" src="ui/img/tap.jpg" width="200" alt="tap" /></a>
       </div>
 
       <div class="navcontainer">
