--- a/integration.html
+++ b/integration.html
@@ -163,11 +163,11 @@ Result: PASS</code></pre>
 
       <div class="navcontainer">
         <ul class="navlist">
-          <li><a title="MyTAP home" href="/">Home</a></li>
+          <li><a title="MyTAP home" href="./">Home</a></li>
           <li><a title="Download MyTAP from GitHub" href="http://github.com/theory/mytap/downloads">Download</a></li>
-          <li><a title="Read the complete MyTAP documentation" href="/documentation.html">Documentation</a></li>
+          <li><a title="Read the complete MyTAP documentation" href="documentation.html">Documentation</a></li>
           <li><a title="Read the documenaton for my_prove" href="http://search.cpan.org/perldoc?my_prove">my_prove</a></li>
-          <li><a title="Integrate MyTAP into your test suite" href="/integration.html" id="selected">Integration</a></li>
+          <li><a title="Integrate MyTAP into your test suite" href="integration.html" id="selected">Integration</a></li>
           <li><a title="MyTAP GitHub Repository" href="http://github.com/theory/mytap/">GitHub</a></li>
         </ul>
         </ul>
