--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@ tests/todotap.my ... ok
 tests/utils.my ..... ok
 All tests successful.
 Files=6, Tests=137,  1 wallclock secs ( 0.06 usr  0.03 sys +  0.01 cusr  0.02 csys =  0.12 CPU)
-Result: PASS
-    </code></pre>
+Result: PASS</code></pre>
 
     <h2>Get Started</h2>
 
