--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Language" content="en-us" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>MyTAP: Unit Testing for PostgreSQL</title>
+    <title>MyTAP: Unit Testing for MySQL</title>
     <link rel="stylesheet" type="text/css" href="ui/css/style.css" />
     <link rel="stylesheet" type="text/css" href="ui/css/menu.css" />
     <!--[if IE 6]>
