--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Result: PASS</code></pre>
       MyTAP</a>, or grab fork the
       <a title="MyTAP GitHub Repository"
       href="http://github.com/theory/mytap/">git repository</a>,
-      read the <a href="/documentation.html" title="The complete MyTAP
+      read the <a href="documentation.html" title="The complete MyTAP
       documentation">documentation</a>, and get going with those tests!</p>
 
     </div>
